tests/should_fail/bug/1496.stderr
error: Dereference of a raw pointer is forbidden in creusot: use `creusot_contracts::ptr_own::PtrOwn` instead
 --> 1496.rs:4:14
  |
4 |     unsafe { &*x }
  |              ^^^

error: aborting due to 1 previous error

